--- a/demo.html
+++ b/demo.html
@@ -26,17 +26,17 @@
   More info at:<br>
   <a href="https://github.com/carloscabo/cookies-warning">https://github.com/carloscabo/cookies-warning</a></p>
 
+  <p><a href="#" onclick="CW.del();">Eliminar la cookie</a></p>
+
 
 <link rel="stylesheet" href="cookies-warning.css" type="text/css">
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="cookies-warning.js"></script>
 <script src="cookies-warning-locales.js"></script>
 <script type="text/javascript">
-  $(document).ready(function() {
-    // Cookies-warning
-    CW.init('es');
-  });
+(function() {
+  CW.init('es');
+})();
 </script>
 </body>
 </html>
