Pure JS version 1

--- a/demo.html
+++ b/demo.html
@@ -26,7 +26,7 @@
   More info at:<br>
   <a href="https://github.com/carloscabo/cookies-warning">https://github.com/carloscabo/cookies-warning</a></p>
 
-  <p><a href="#" onclick="CW.del();">Eliminar la cookie</a></p>
+  <p><a href="#" onclick="CW.del();">Eliminar la cookie / reiniciar demo</a></p>
 
 
 <link rel="stylesheet" href="cookies-warning.css" type="text/css">
