--- a/demo.html
+++ b/demo.html
@@ -28,15 +28,21 @@
 
   <p><a href="#" onclick="CW.del();">Eliminar la cookie / reiniciar demo</a></p>
 
-
-<link rel="stylesheet" href="cookies-warning.css" type="text/css">
+<!--
+  Now the CSS is automatically injected by the JS to avoid an extra request
+  <link rel="stylesheet" href="cookies-warning.css" type="text/css">
+-->
 
 <script src="cookies-warning.js"></script>
 <script src="cookies-warning-locales.js"></script>
 <script type="text/javascript">
-(function() {
-  CW.init('es');
-})();
+window.onload = function() {
+  CW.init({
+    lang: 'es',
+    // show_only_once: true
+    // before_element_ID: 'ELEMENT-ID',
+  });
+};
 </script>
 </body>
 </html>
