--- a/demo-auto-init.htm
+++ b/demo-auto-init.htm
@@ -21,14 +21,7 @@
     }
   </style>
 
-  <script src="cookies-warning.js"></script>
-  <script type="text/javascript">
-    CW.init({
-      lang: 'es',
-      // show_only_once: true
-      // before_element_ID: 'ELEMENT-ID',
-    });
-</script>
+  <script src="cookies-warning.js?auto_init"></script>
 </head>
 <body>
 <p>
@@ -36,11 +29,6 @@
   <a href="https://github.com/carloscabo/cookies-warning">https://github.com/carloscabo/cookies-warning</a></p>
 
   <p><a href="#" onclick="CW.del();">Eliminar la cookie / reiniciar demo</a></p>
-
-<!--
-  Now the CSS and the cookies-warning-locales.js are automatically injected by the JS to avoid an extra request <link rel="stylesheet" href="cookies-warning.css" type="text/css">
--->
-
 
 </body>
 </html>
