--- a/demo.html
+++ b/demo.html
@@ -25,6 +25,7 @@
   <script type="text/javascript">
     CW.init({
       lang: 'es',
+      stylesheet: 'cookies-warning-bubble.css',
       // show_only_once: true
       // before_element_ID: 'ELEMENT-ID',
     });
