Skin2 added, improvements in autoloading

--- a/demo-auto-init.htm
+++ b/demo-auto-init.htm
@@ -21,7 +21,7 @@
     }
   </style>
 
-  <script src="cookies-warning.js?auto_init"></script>
+  <script src="cookies-warning.js?auto_init&amp;lang=en"></script>
 </head>
 <body>
 <p>
