Lenguage por defecto...

--- a/demo.htm
+++ b/demo.htm
@@ -24,8 +24,9 @@
   <script src="cookies-warning.js"></script>
   <script type="text/javascript">
     CW.init({
-      lang: 'es',
+      // lang: 'es',
       stylesheet: 'cookies-warning-bubble.css',
+      // locales: '/js/cookies-warning-locales.js',
       // show_only_once: true
       // before_element_ID: 'ELEMENT-ID',
     });
