Cambios en README y enlaces

--- a/demo.htm
+++ b/demo.htm
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Cookies warning sample</title>
+  <title>Cookie Policy Consent Demo</title>
   <style>
     body {
       position: relative;
@@ -43,7 +43,7 @@
 <div id="container">
   <p>
     More info at:<br>
-    <a href="https://github.com/carloscabo/cookies-warning">https://github.com/carloscabo/cookies-warning</a></p>
+    <a href="https://github.com/carloscabo/cookie-policy-consent">https://github.com/carloscabo/cookie-policy-consent</a></p>
 
     <p><a href="#" onclick='document.cookie = "cookie-policy-consent-accepted=; expires=Thu, 01 Jan 2000 00:00:00 GMT";'>Eliminar la cookie / reiniciar demo</a></p>
 
