Eliminada línea innecesaria

--- a/demo.htm
+++ b/demo.htm
@@ -33,6 +33,7 @@
         // show_only_once: true,
         // click_anywhere: true, // Force closing clinking anywhere
         // msg: '<b>Custom cookie msg without locales</b>.<a href="#" id="cookie-policy-consent-close">Aceptar</a>',
+        // expire_days: 999,
         // before_element_ID: 'container',
       });
 
