--- a/demo-auto-init.htm
+++ b/demo-auto-init.htm
@@ -21,14 +21,12 @@
     }
   </style>
 
-  <script src="cookie-policy-consent.js?auto_init"></script>
+  <script src="cookie-policy-consent.js?auto_init=1"></script>
 </head>
 <body>
 <p>
   More info at:<br>
   <a href="https://github.com/carloscabo/cookies-warning">https://github.com/carloscabo/cookies-warning</a></p>
-
   <p><a href="#" onclick="CPC.del();">Eliminar la cookie / reiniciar demo</a></p>
-
 </body>
 </html>
